<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutSplash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BSplash">

    <ImageView
        android:id="@+id/backgroundSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:rotation="0"
        android:scaleType="centerCrop"
        android:scaleX="1.3"
        android:scaleY="1.3"
        android:scrollY="-20dp"
        android:src="@drawable/planetearth" />

    <FrameLayout
        android:id="@+id/backgroundScrim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:background="@drawable/scrim">

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/groupLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/imgLogo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:layout_marginTop="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/rocketlogo"
            app:civ_border_color="#EEE"
            app:civ_border_width="0dp"
            app:civ_shadow="true"
            app:civ_shadow_color="#FFF"
            app:civ_shadow_radius="0" />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLogo"
            android:fontFamily="@font/bromello"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/app_name"
            android:textColor="@android:color/background_light"
            android:textSize="56sp" />

        <TextView
            android:id="@+id/tvSlogan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvNombre"
            android:fontFamily="@font/bromello"
            android:gravity="center"
            android:text="@string/slogan"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />
    </RelativeLayout>

</RelativeLayout>