<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/imgLogo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_account_circle_black_24dp"
        app:civ_border_color="#EEE"
        app:civ_border_width="0dp"
        app:civ_shadow="true"
        app:civ_shadow_color="#FFF"
        app:civ_shadow_radius="0" />

    <TextView
        android:id="@+id/tvSignInTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bromello"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@android:color/background_light"
        android:textSize="54sp" />

    <ScrollView
        android:id="@+id/scrollView"
        style="@style/LayoutMargin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/progressBar"
        android:layout_below="@+id/tvSignInTitle"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/background_light">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etxName"
                    style="@style/TextInputButton"
                    android:backgroundTint="@android:color/background_light"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:hint="@string/email"
                    android:textColor="@android:color/background_light"
                    android:textColorHint="@android:color/background_light"
                    android:textColorLink="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/background_light">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etxPassword"
                    style="@style/TextInputButton"
                    android:backgroundTint="@android:color/background_light"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:hint="@string/password"
                    android:textColor="@android:color/background_light"
                    android:textColorHint="@android:color/background_light"
                    android:textColorLink="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/background_light"
                android:onClick="signIn"
                android:text="@string/sign_in"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/no_eres_usuario_registrate"
                android:textColor="@android:color/background_light" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:indeterminate="true"
        android:indeterminateTint="@android:color/white"
        android:indeterminateTintMode="src_in" />

</RelativeLayout>